# cpp-bindings-test

./: .envrc  CMakeLists.txt  flake.nix
.github/workflows/: lib.yaml  python.yaml
bindings/python/: .envrc  .gitignore  flake.nix  hatch_build.py  pyproject.toml  setup.py  shell.nix
bindings/python/cpp-bindings-test/: __init__.py
bindings/python/src/: _ctypes.py
cpp-bindings-test/: .envrc  CMakeLists.txt  cpp-bindings-test.pc.in  flake.nix  glibc-compat-header.nix  libc-compat.nix  package.nix
cpp-bindings-test/include/: cpp-bindings-test.h
cpp-bindings-test/src/: main.cpp
cpp-bindings-test/test/: test.cpp
src/: main.cpp
