[project]
name = "cpp_bindings_test"
version = "0.1"
requires-python = ">=3.9"

[dependency-groups]
dev = ["setuptools", "setuptools-scm==8.2.0", "cmake-build-extension", "ruff"]
ci = ["cibuildwheel", "wheel"]

[build-system]
requires = ["setuptools", "setuptools-scm==8.2.0", "cmake-build-extension"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-*"
skip = ["pp*", "*_i686", "*-win32"]
build-frontend = "build[uv]"

[tool.distutils.egg_info]
egg_base = "."

[tool.ruff]
line-length = 100

[tool.setuptools_scm]
root = "../.."

[tool.uv.sources]
cmake-build-extension = { git = "https://github.com/30350n/cmake-build-extension", branch = "patch-1" }
