[project]
name = "cpp-bindings-test"
version = "0.1"
requires-python = ">=3.9"

[dependency-groups]
dev = ["hatchling", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["cpp-bindings-test"]
[tool.hatch.build.targets.sdist.force-include]
"../../cpp-bindings-test/CMakeLists.txt" = "lib-cpp-bindings-test/CMakeLists.txt"
"../../cpp-bindings-test/src" = "lib-cpp-bindings-test/src"
[tool.hatch.build.targets.wheel]
artifacts = ["*/lib/*.so", "*/lib/*.dll", "*/lib/*.dylib"]
[tool.hatch.build.targets.wheel.hooks.custom]

[tool.ruff]
line-length = 100
